<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<!--<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.0.RELEASE</version>
		<relativePath /> &lt;!&ndash; lookup parent from repository &ndash;&gt;
	</parent>-->

	<groupId>com.github.binmagic</groupId>
	<artifactId>velen-etl-parent</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<name>velen-etl</name>
	<description>ETL project for Spring Boot</description>
	<packaging>pom</packaging>
	<url>https://github.com/binmagic/velen-etl</url>

	<scm>
		<connection>scm:git:git@github.com:binmagic/velen-etl.git</connection>
		<developerConnection>scm:git:git@github.com:binmagic/velen-etl.git</developerConnection>
		<url>https://github.com/binmagic/velen-etl</url>
	    <tag>HEAD</tag>
    </scm>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<modules>
		<module>velen-etl-generator</module>
		<module>velen-etl-stream</module>
		<module>velen-etl-common</module>
		<module>velen-etl-task</module>
		<module>velen-etl-dispatcher</module>
		<module>velen-etl-dataflow-collection</module>
		<module>velen-etl-configuration</module>
		<module>velen-etl-api</module>
		<module>spring-cloud-spark-rest-client</module>
	</modules>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<!--<maven.deploy.skip>false</maven.deploy.skip>-->

		<spring.cloud.alibaba.dependencies.version>2.2.1.RELEASE</spring.cloud.alibaba.dependencies.version>
		<spring.cloud.dependencies.version>Hoxton.SR3</spring.cloud.dependencies.version>
		<spring.boot.version>2.2.5.RELEASE</spring.boot.version>
		<spring.boot.admin.version>2.2.2</spring.boot.admin.version>

		<spring.data.hadoop.version>2.5.0.RELEASE</spring.data.hadoop.version>

		<kotlin.version>1.3.72</kotlin.version>
		<kotlinx-coroutines.version>1.3.6</kotlinx-coroutines.version>
		<reactor-kotlin-extensions.version>1.0.2.RELEASE</reactor-kotlin-extensions.version>

		<jacoco.outputDir>${project.basedir}/target</jacoco.outputDir>
		<jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
		<sonar.host.url>http://192.168.1.210:9002</sonar.host.url>
		<sonar.java.binaries>target/classes</sonar.java.binaries>
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.jacoco.reportPaths>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.reportPaths>

		<lombok.version>1.18.12</lombok.version>
		<nacos.api.version>1.3.0</nacos.api.version>
		<hive.jdbc.version>3.1.2</hive.jdbc.version>


	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.github.binmagic</groupId>
				<artifactId>velen-etl-common</artifactId>
				<version>${project.parent.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.binmagic</groupId>
				<artifactId>velen-etl-configuration</artifactId>
				<version>${project.parent.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.binmagic</groupId>
				<artifactId>velen-etl-api</artifactId>
				<version>${project.parent.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring.cloud.dependencies.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>com.alibaba.cloud</groupId>
				<artifactId>spring-cloud-alibaba-dependencies</artifactId>
				<version>${spring.cloud.alibaba.dependencies.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.alibaba.nacos</groupId>
				<artifactId>nacos-api</artifactId>
				<version>${nacos.api.version}</version>
				<scope>compile</scope>
			</dependency>

			<!-- https://mvnrepository.com/artifact/com.alibaba.nacos/nacos-spring-context -->
			<dependency>
				<groupId>com.alibaba.nacos</groupId>
				<artifactId>nacos-spring-context</artifactId>
				<version>0.3.6</version>
			</dependency>

			<!--<dependency>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-stdlib</artifactId>
				<version>${kotlin.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-test</artifactId>
				<version>${kotlin.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-reflect</artifactId>
				<version>${kotlin.version}</version>
			</dependency>-->

			<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>

			<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>1.2.83</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-starter -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>druid-spring-boot-starter</artifactId>
				<version>1.1.22</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.apache.hive/hive-jdbc -->
			<dependency>
				<groupId>org.apache.hive</groupId>
				<artifactId>hive-jdbc</artifactId>
				<version>${hive.jdbc.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.eclipse.jetty.aggregate</groupId>
						<artifactId>*</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.apache.hive</groupId>
						<artifactId>hive-shims</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-hadoop -->
			<dependency>
				<groupId>org.springframework.data</groupId>
				<artifactId>spring-data-hadoop</artifactId>
				<version>${spring.data.hadoop.version}</version>
			</dependency>


		</dependencies>
	</dependencyManagement>


	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>spring-boot-starter-logging</artifactId>
					<groupId>org.springframework.boot</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<finalName>${project.artifactId}-${project.version}</finalName>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring.boot.version}</version>
				</plugin>
				<!--<plugin>
					<groupId>org.jetbrains.kotlin</groupId>
					<artifactId>kotlin-maven-plugin</artifactId>
					<version>${kotlin.version}</version>
				</plugin>-->

				<!-- compiler -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.5.1</version>
				</plugin>
				<plugin>
					<groupId>com.spotify</groupId>
					<artifactId>docker-maven-plugin</artifactId>
					<version>1.2.2</version>
				</plugin>
				<plugin>
					<groupId>pl.project13.maven</groupId>
					<artifactId>git-commit-id-plugin</artifactId>
					<version>4.0.0</version>
				</plugin>

				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco-maven-plugin.version}</version>
					<configuration>
						<skip>${skipJacoco}</skip>
						<destFile>${sonar.jacoco.reportPaths}</destFile>
						<propertyName>jacoco.agent.ut.arg</propertyName>
						<append>true</append>
					</configuration>
					<executions>
						<execution>
							<id>pre-unit-test</id>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- jar source -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.1.0</version>
					<configuration>
						<skipSource>${skipSource}</skipSource>
					</configuration>
					<executions>
						<execution>
							<id>attach-sources</id>
							<phase>generate-sources</phase><!--  要绑定到的生命周期的阶段 在verify之后，install之前执行下面指定的goal -->
							<goals>
								<goal>jar-no-fork</goal><!-- 类似执行mvn source:jar -->
							</goals>

							<configuration>
								<excludes>
									<exclude>${project.artifactId}-${project.version}-sources.jar</exclude>
								</excludes>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<!-- maven编译取消test测试 -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
					<configuration>
						<argLine>${jacoco.agent.ut.arg} --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
							-Dco.paralleluniverse.fibers.DefaultFiberPool.monitor=NONE -Dstorm.util.debug.check=true
							--add-opens java.base/jdk.internal.misc=ALL-UNNAMED --add-opens
							java.base/java.lang=ALL-UNNAMED -Dco.paralleluniverse.fibers.verifyInstrumentation=true
						</argLine>
						<skip>${skipTests}</skip>
					</configuration>
				</plugin>

				<!-- 用于打包 docker 镜像 -->
				<plugin>
					<groupId>com.spotify</groupId>
					<artifactId>docker-maven-plugin</artifactId>
					<configuration>
						<dockerHost>${DockerHost}</dockerHost>
						<imageName>${ImageName}</imageName>
						<baseImage>openjdk:8-jre-alpine</baseImage>
						<entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
						<exposes>
							<expose>${ExposePort}</expose>
						</exposes>
						<resources>
							<resource>
								<targetPath>/</targetPath>
								<directory>${project.build.directory}</directory>
								<include>${project.build.finalName}.jar</include>
							</resource>
						</resources>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<fork>true</fork>  <!-- 如果没有该生效标志，热部署的devtools不生效 -->
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!--<plugin>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>test-compile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>test-compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<jvmTarget>1.8</jvmTarget>
				</configuration>
			</plugin>-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<executions>
					<!-- 替换会被 maven 特别处理的 default-compile -->
					<execution>
						<id>default-compile</id>
						<phase>none</phase>
					</execution>
					<!-- 替换会被 maven 特别处理的 default-testCompile -->
					<execution>
						<id>default-testCompile</id>
						<phase>none</phase>
					</execution>
					<execution>
						<id>java-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>java-test-compile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>

			<!-- maven编译取消test测试 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>

			<!-- jar source -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
			</plugin>
		</plugins>

		<resources>
			<!--<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.xml</include>
					<include>**/*.json</include>
					<include>**/*.properties</include>
					<include>**/*.yml</include>
				</includes>
			</resource>-->
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*.xml</include>
					<include>**/*.json</include>
					<include>**/*.properties</include>
					<include>**/*.yml</include>
					<include>**/*factories</include>
				</includes>
				<filtering>true</filtering>
			</resource>
		</resources>

		<!--单元测试时引用src/main/resources下的资源文件-->
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<includes>
					<include>**/*.xml</include>
					<include>**/*.json</include>
					<include>**/*.properties</include>
					<include>**/*.yml</include>
				</includes>
			</testResource>
			<testResource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*.xml</include>
					<include>**/*.json</include>
					<include>**/*.properties</include>
					<include>**/*.yml</include>
				</includes>
			</testResource>
		</testResources>
	</build>

	<profiles>
		<profile>
			<!--不同环境Profile的唯一id-->
			<id>dev</id>
			<properties>
				<!--profiles.active是自定义的字段（名字随便起），自定义字段可以有多个-->
				<profile.active>dev</profile.active>
				<skipSecurity>true</skipSecurity>
				<skipJavadoc>false</skipJavadoc>
				<skipSource>false</skipSource>
				<skipTests>true</skipTests>
				<skipJacoco>true</skipJacoco>
				<skipSonar>true</skipSonar>
				<coverOriginal>false</coverOriginal>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<distributionManagement>
				<snapshotRepository>
					<id>nexus-snapshot</id>
					<name>nexus-snapshot</name>
					<url>http://192.168.1.210:8082/repository/maven-snapshots/</url>
				</snapshotRepository>
				<repository>
					<id>nexus-release</id>
					<name>nexus-release</name>
					<url>http://192.168.1.210:8082/repository/maven-releases/</url>
				</repository>
			</distributionManagement>
		</profile>
		<profile>
			<id>release</id>
			<properties>
				<profile.active>release</profile.active>
				<skipSecurity>false</skipSecurity>
				<skipJavadoc>true</skipJavadoc>
				<skipSource>true</skipSource>
				<skipTests>true</skipTests>
				<skipJacoco>true</skipJacoco>
				<skipSonar>true</skipSonar>
				<coverOriginal>false</coverOriginal>
			</properties>
			<build>
				<plugins>
					<!-- Maven 仓库插件 source, javadoc, gpg,  -->
					<!-- Source -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<!-- Javadoc -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<!-- GPG -->
					<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<!-- 版本发布 -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-release-plugin</artifactId>
						<version>2.5.3</version>
						<configuration>
							<tagNameFormat>v@{project.version}</tagNameFormat>
							<autoVersionSubmodules>true</autoVersionSubmodules>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<distributionManagement>
				<snapshotRepository>
					<id>sonatype</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
				</snapshotRepository>
				<repository>
					<id>sonatype</id>
					<url>https://oss.sonatype.org/com.velen.etl.stream.service/local/staging/deploy/maven2</url>
				</repository>
			</distributionManagement>
		</profile>
		<profile>
			<id>test</id>
			<properties>
				<profile.active>test</profile.active>
				<skipSecurity>true</skipSecurity>
				<skipJavadoc>true</skipJavadoc>
				<skipSource>true</skipSource>
				<skipTests>false</skipTests>
				<skipJacoco>false</skipJacoco>
				<skipSonar>false</skipSonar>
				<coverOriginal>false</coverOriginal>
			</properties>
		</profile>
		<profile>
			<id>release-stress</id>
			<properties>
				<profile.active>release</profile.active>
				<skipSecurity>false</skipSecurity>
				<skipJavadoc>true</skipJavadoc>
				<skipSource>false</skipSource>
				<skipTests>true</skipTests>
				<skipJacoco>true</skipJacoco>
				<skipSonar>true</skipSonar>
				<coverOriginal>false</coverOriginal>
			</properties>
		</profile>
	</profiles>

</project>
